src/test/ui/suggestions/suggest-remove-refs-3.stderr
error[E0277]: `&&&&&Enumerate<std::slice::Iter<'_, {integer}>>` is not an iterator
  --> $DIR/suggest-remove-refs-3.rs:6:19
   |
LL |        for (i, _) in & & &
   |   ___________________^
   |  |___________________|
   | ||
LL | ||         & &v
   | ||___________- help: consider removing 5 leading `&`-references
LL | |          .iter()
LL | |          .enumerate() {
   | |_____________________^ `&&&&&Enumerate<std::slice::Iter<'_, {integer}>>` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&&&&&Enumerate<std::slice::Iter<'_, {integer}>>`
   = note: required for `&&&&&Enumerate<std::slice::Iter<'_, {integer}>>` to implement `IntoIterator`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
